--- a/Experiment 2 -> Gradient Boosting Regressor.ipynb
+++ b/Experiment 2 -> Gradient Boosting Regressor.ipynb
@@ -12,6 +12,7 @@
     "from sklearn.multioutput import MultiOutputRegressor\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "from catboost import CatBoostRegressor\n",
     "import time"
    ]
   },
@@ -73,12 +74,12 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.8941935154126756\n"
+      "0.822938163697732\n"
      ]
     }
    ],
    "source": [
-    "clf1 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf1 = GradientBoostingRegressor()\n",
     "startTime = time.time()\n",
     "clf1.fit(X_train, np.ravel(Y1_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -96,12 +97,12 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.7635093210398933\n"
+      "0.875956553348419\n"
      ]
     }
    ],
    "source": [
-    "clf2 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf2 = GradientBoostingRegressor()\n",
     "startTime = time.time()\n",
     "clf2.fit(X_train, np.ravel(Y2_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -119,12 +120,12 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.825890024264614\n"
+      "0.9079208021027881\n"
      ]
     }
    ],
    "source": [
-    "clf3 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf3 = GradientBoostingRegressor()\n",
     "startTime = time.time()\n",
     "clf3.fit(X_train, np.ravel(Y3_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -142,12 +143,12 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.802877417299758\n"
+      "0.9290160250137034\n"
      ]
     }
    ],
    "source": [
-    "clf4 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf4 = GradientBoostingRegressor()\n",
     "startTime = time.time()\n",
     "clf4.fit(X_train, np.ravel(Y4_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -165,12 +166,12 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.8260481219943225\n"
+      "0.8674612096427192\n"
      ]
     }
    ],
    "source": [
-    "clf5 = svm.SVR(kernel = \"rbf\", C = 5, max_iter=-1)\n",
+    "clf5 = GradientBoostingRegressor()\n",
     "startTime = time.time()\n",
     "clf5.fit(X_train, np.ravel(Y5_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -188,12 +189,12 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.9178831824059016\n"
+      "0.9777088435953745\n"
      ]
     }
    ],
    "source": [
-    "clf6 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf6 = GradientBoostingRegressor()\n",
     "startTime = time.time()\n",
     "clf6.fit(X_train, np.ravel(Y6_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -209,7 +210,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0415408510958451"
+       "0.023668840044042617"
       ]
      },
      "execution_count": 10,
@@ -218,7 +219,7 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[0::4]) - np.array(Y6_test.iloc[0::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[0::4]) - np.array(Y1_test.iloc[0::4][0])).mean()"
    ]
   },
   {
@@ -229,7 +230,7 @@
     {
      "data": {
       "text/plain": [
-       "0.042407305026955104"
+       "0.02660851261308902"
       ]
      },
      "execution_count": 11,
@@ -238,7 +239,7 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[1::4]) - np.array(Y6_test.iloc[1::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[1::4]) - np.array(Y1_test.iloc[1::4][0])).mean()"
    ]
   },
   {
@@ -249,7 +250,7 @@
     {
      "data": {
       "text/plain": [
-       "0.04499368395731612"
+       "0.02793673452734509"
       ]
      },
      "execution_count": 12,
@@ -258,7 +259,7 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[2::4]) - np.array(Y6_test.iloc[2::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[2::4]) - np.array(Y1_test.iloc[2::4][0])).mean()"
    ]
   },
   {
@@ -269,7 +270,7 @@
     {
      "data": {
       "text/plain": [
-       "0.04702074310398529"
+       "0.029495241036471827"
       ]
      },
      "execution_count": 13,
@@ -278,44 +279,45 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[3::4]) - np.array(Y6_test.iloc[3::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[3::4]) - np.array(Y1_test.iloc[3::4][0])).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 4179.56635408,  7178.77002491,  7792.15088447,  4401.92348052,\n",
-       "         2771.56491565, -3838.48490729,  1990.        ]])"
+       "array([[ 51343.92369491, 132914.35504223,   2727.01455908,\n",
+       "          3628.61803921,   3228.75155387,  45098.24021051,\n",
+       "          1990.        ]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "i = 20\n",
+    "i = 120\n",
     "scalerY.inverse_transform([[clf1.predict([X_test.iloc[i]])[0], clf2.predict([X_test.iloc[i]])[0], clf3.predict([X_test.iloc[i]])[0], \n",
     "                          clf4.predict([X_test.iloc[i]])[0], clf5.predict([X_test.iloc[i]])[0], clf6.predict([X_test.iloc[i]])[0], 0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[4450., 3275., 4394., 1198.,  811.,   56., 2014.]])"
+       "array([[ 57900., 136649.,   3206.,    821.,   2385.,  49816.,   2014.]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
