--- a/Experiment 3 -> Gaussian Process Regressor.ipynb
+++ b/Experiment 3 -> Gaussian Process Regressor.ipynb
@@ -12,6 +12,8 @@
     "from sklearn.multioutput import MultiOutputRegressor\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
+    "from sklearn.gaussian_process.kernels import DotProduct, WhiteKernel\n",
     "import time"
    ]
   },
@@ -72,13 +74,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.8941935154126756\n"
+      "3 s\n",
+      "0.9089119286214008\n"
      ]
     }
    ],
    "source": [
-    "clf1 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf1 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf1.fit(X_train, np.ravel(Y1_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -95,13 +98,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.7635093210398933\n"
+      "2 s\n",
+      "0.5103996943790065\n"
      ]
     }
    ],
    "source": [
-    "clf2 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf2 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf2.fit(X_train, np.ravel(Y2_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -118,13 +122,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.825890024264614\n"
+      "3 s\n",
+      "0.8102315339775339\n"
      ]
     }
    ],
    "source": [
-    "clf3 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf3 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf3.fit(X_train, np.ravel(Y3_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -141,13 +146,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.802877417299758\n"
+      "3 s\n",
+      "0.7416145533171143\n"
      ]
     }
    ],
    "source": [
-    "clf4 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf4 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf4.fit(X_train, np.ravel(Y4_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -164,13 +170,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.8260481219943225\n"
+      "3 s\n",
+      "0.6968519543451486\n"
      ]
     }
    ],
    "source": [
-    "clf5 = svm.SVR(kernel = \"rbf\", C = 5, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf5 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf5.fit(X_train, np.ravel(Y5_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -187,13 +194,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.9178831824059016\n"
+      "3 s\n",
+      "0.7896864873406086\n"
      ]
     }
    ],
    "source": [
-    "clf6 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf6 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf6.fit(X_train, np.ravel(Y6_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -209,7 +217,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0415408510958451"
+       "0.033442492586183765"
       ]
      },
      "execution_count": 10,
@@ -218,7 +226,7 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[0::4]) - np.array(Y6_test.iloc[0::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[0::4]) - np.array(Y1_test.iloc[0::4][0])).mean()"
    ]
   },
   {
@@ -229,7 +237,7 @@
     {
      "data": {
       "text/plain": [
-       "0.042407305026955104"
+       "0.03660228885197734"
       ]
      },
      "execution_count": 11,
@@ -238,7 +246,7 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[1::4]) - np.array(Y6_test.iloc[1::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[1::4]) - np.array(Y1_test.iloc[1::4][0])).mean()"
    ]
   },
   {
@@ -249,7 +257,7 @@
     {
      "data": {
       "text/plain": [
-       "0.04499368395731612"
+       "0.038677945246048104"
       ]
      },
      "execution_count": 12,
@@ -258,7 +266,7 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[2::4]) - np.array(Y6_test.iloc[2::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[2::4]) - np.array(Y1_test.iloc[2::4][0])).mean()"
    ]
   },
   {
@@ -269,7 +277,7 @@
     {
      "data": {
       "text/plain": [
-       "0.04702074310398529"
+       "0.041271382593329346"
       ]
      },
      "execution_count": 13,
@@ -278,44 +286,44 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[3::4]) - np.array(Y6_test.iloc[3::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[3::4]) - np.array(Y1_test.iloc[3::4][0])).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 4179.56635408,  7178.77002491,  7792.15088447,  4401.92348052,\n",
-       "         2771.56491565, -3838.48490729,  1990.        ]])"
+       "array([[70151.79415168, 62856.88933438, 13199.93431671,  7634.30452443,\n",
+       "         3525.00155525, 42144.79058403,  1990.        ]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "i = 20\n",
+    "i = 120\n",
     "scalerY.inverse_transform([[clf1.predict([X_test.iloc[i]])[0], clf2.predict([X_test.iloc[i]])[0], clf3.predict([X_test.iloc[i]])[0], \n",
     "                          clf4.predict([X_test.iloc[i]])[0], clf5.predict([X_test.iloc[i]])[0], clf6.predict([X_test.iloc[i]])[0], 0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[4450., 3275., 4394., 1198.,  811.,   56., 2014.]])"
+       "array([[ 57900., 136649.,   3206.,    821.,   2385.,  49816.,   2014.]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,13 +331,6 @@
    "source": [
     "scalerY.inverse_transform([Y_test.iloc[i]])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
