--- a/Experiment 4 -> SVM Regressor temporal.ipynb
+++ b/Experiment 4 -> SVM Regressor temporal.ipynb
@@ -21,20 +21,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = pd.read_parquet(\"X/X_train.parquet\")\n",
-    "X_test = pd.read_parquet(\"X/X_test.parquet\")\n",
-    "Y_train = pd.read_parquet(\"Y/Y_train.parquet\")\n",
-    "Y_test = pd.read_parquet(\"Y/Y_test.parquet\")\n",
+    "X_train = pd.read_parquet(\"Xtime/X_train.parquet\")\n",
+    "X_test = pd.read_parquet(\"Xtime/X_test.parquet\")\n",
+    "Y_train = pd.read_parquet(\"Ytime/Y_train.parquet\")\n",
+    "Y_test = pd.read_parquet(\"Ytime/Y_test.parquet\")\n",
     "X_train = X_train[['Built', 'Below Secundary', 'Income Median',\n",
     "       'Population', 'Over 65', 'Over 65 Percentage', 'Over 85',\n",
     "       'Over 85 Percentage', 'Over 50', 'Over 50 Percentage', 'Under 20',\n",
     "       'Under 20 Percentage', 'Income Per Capita', 'Tourism', 'Area',\n",
-    "       'Built Area']]\n",
+    "       'Built Area', 'Last Year Municipal', 'Last Year Household',\n",
+    "       'Last Year Recovered', 'Last Year Recicled', 'Last Year Compost',\n",
+    "       'Last Year Built', 'Difference Built', 'Mean Built',\n",
+    "       'Last Year Below Secundary', 'Difference Below Secundary',\n",
+    "       'Last Year Population', 'Difference Population', 'Last Year Tourism',\n",
+    "       'Difference Tourism']]\n",
     "X_test = X_test[['Built', 'Below Secundary', 'Income Median',\n",
     "       'Population', 'Over 65', 'Over 65 Percentage', 'Over 85',\n",
     "       'Over 85 Percentage', 'Over 50', 'Over 50 Percentage', 'Under 20',\n",
     "       'Under 20 Percentage', 'Income Per Capita', 'Tourism', 'Area',\n",
-    "       'Built Area']]"
+    "       'Built Area', 'Last Year Municipal', 'Last Year Household',\n",
+    "       'Last Year Recovered', 'Last Year Recicled', 'Last Year Compost',\n",
+    "       'Last Year Built', 'Difference Built', 'Mean Built',\n",
+    "       'Last Year Below Secundary', 'Difference Below Secundary',\n",
+    "       'Last Year Population', 'Difference Population', 'Last Year Tourism',\n",
+    "       'Difference Tourism']]"
    ]
   },
   {
@@ -48,42 +58,27 @@
     "X_test = pd.DataFrame(scalerX.transform(X_test))\n",
     "scalerY = MinMaxScaler().fit(Y_train)\n",
     "Y_train = pd.DataFrame(scalerY.transform(Y_train))\n",
-    "Y_test = pd.DataFrame(scalerY.transform(Y_test))\n",
-    "Y1_train = Y_train[[0]]\n",
-    "Y1_test = Y_test[[0]]\n",
-    "Y2_train = Y_train[[1]]\n",
-    "Y2_test = Y_test[[1]]\n",
-    "Y3_train = Y_train[[2]]\n",
-    "Y3_test = Y_test[[2]]\n",
-    "Y4_train = Y_train[[3]]\n",
-    "Y4_test = Y_test[[3]]\n",
-    "Y5_train = Y_train[[4]]\n",
-    "Y5_test = Y_test[[4]]\n",
-    "Y6_train = Y_train[[5]]\n",
-    "Y6_test = Y_test[[5]]"
+    "Y_test = pd.DataFrame(scalerY.transform(Y_test))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 s\n",
-      "0.8941935154126756\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "clf1 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
-    "startTime = time.time()\n",
-    "clf1.fit(X_train, np.ravel(Y1_train))\n",
-    "elapsedTime = time.time() - startTime\n",
-    "print('{} s'.format(int(elapsedTime)))\n",
-    "print(clf1.score(X_test, Y1_test))"
+    "Y1_train = Y_train[[Y_train.columns[0]]]\n",
+    "Y1_test = Y_test[[Y_test.columns[0]]]\n",
+    "Y2_train = Y_train[[Y_train.columns[1]]]\n",
+    "Y2_test = Y_test[[Y_test.columns[1]]]\n",
+    "Y3_train = Y_train[[Y_train.columns[2]]]\n",
+    "Y3_test = Y_test[[Y_test.columns[2]]]\n",
+    "Y4_train = Y_train[[Y_train.columns[3]]]\n",
+    "Y4_test = Y_test[[Y_test.columns[3]]]\n",
+    "Y5_train = Y_train[[Y_train.columns[4]]]\n",
+    "Y5_test = Y_test[[Y_test.columns[4]]]\n",
+    "Y6_train = Y_train[[Y_train.columns[5]]]\n",
+    "Y6_test = Y_test[[Y_test.columns[5]]]"
    ]
   },
   {
@@ -96,17 +91,17 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.7635093210398933\n"
+      "0.8889192272821811\n"
      ]
     }
    ],
    "source": [
-    "clf2 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf1 = svm.SVR(kernel = \"poly\", max_iter=-1)\n",
     "startTime = time.time()\n",
-    "clf2.fit(X_train, np.ravel(Y2_train))\n",
+    "clf1.fit(X_train, np.ravel(Y1_train))\n",
     "elapsedTime = time.time() - startTime\n",
     "print('{} s'.format(int(elapsedTime)))\n",
-    "print(clf2.score(X_test, Y2_test))"
+    "print(clf1.score(X_test, Y1_test))"
    ]
   },
   {
@@ -119,17 +114,17 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.825890024264614\n"
+      "0.9381254884104485\n"
      ]
     }
    ],
    "source": [
-    "clf3 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf2 = svm.SVR(kernel = \"poly\", max_iter=-1)\n",
     "startTime = time.time()\n",
-    "clf3.fit(X_train, np.ravel(Y3_train))\n",
+    "clf2.fit(X_train, np.ravel(Y2_train))\n",
     "elapsedTime = time.time() - startTime\n",
     "print('{} s'.format(int(elapsedTime)))\n",
-    "print(clf3.score(X_test, Y3_test))"
+    "print(clf2.score(X_test, Y2_test))"
    ]
   },
   {
@@ -142,17 +137,17 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.802877417299758\n"
+      "0.9057265298051079\n"
      ]
     }
    ],
    "source": [
-    "clf4 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf3 = svm.SVR(kernel = \"poly\", max_iter=-1)\n",
     "startTime = time.time()\n",
-    "clf4.fit(X_train, np.ravel(Y4_train))\n",
+    "clf3.fit(X_train, np.ravel(Y3_train))\n",
     "elapsedTime = time.time() - startTime\n",
     "print('{} s'.format(int(elapsedTime)))\n",
-    "print(clf4.score(X_test, Y4_test))"
+    "print(clf3.score(X_test, Y3_test))"
    ]
   },
   {
@@ -165,17 +160,17 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.8260481219943225\n"
+      "0.8408130045722708\n"
      ]
     }
    ],
    "source": [
-    "clf5 = svm.SVR(kernel = \"rbf\", C = 5, max_iter=-1)\n",
+    "clf4 = svm.SVR(kernel = \"poly\", max_iter=-1)\n",
     "startTime = time.time()\n",
-    "clf5.fit(X_train, np.ravel(Y5_train))\n",
+    "clf4.fit(X_train, np.ravel(Y4_train))\n",
     "elapsedTime = time.time() - startTime\n",
     "print('{} s'.format(int(elapsedTime)))\n",
-    "print(clf5.score(X_test, Y5_test))"
+    "print(clf4.score(X_test, Y4_test))"
    ]
   },
   {
@@ -188,17 +183,17 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.9178831824059016\n"
+      "0.8427215334957956\n"
      ]
     }
    ],
    "source": [
-    "clf6 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf5 = svm.SVR(kernel = \"poly\", max_iter=-1)\n",
     "startTime = time.time()\n",
-    "clf6.fit(X_train, np.ravel(Y6_train))\n",
+    "clf5.fit(X_train, np.ravel(Y5_train))\n",
     "elapsedTime = time.time() - startTime\n",
     "print('{} s'.format(int(elapsedTime)))\n",
-    "print(clf6.score(X_test, Y6_test))"
+    "print(clf5.score(X_test, Y5_test))"
    ]
   },
   {
@@ -207,18 +202,21 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.0415408510958451"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 s\n",
+      "0.8547824916921111\n"
+     ]
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[0::4]) - np.array(Y6_test.iloc[0::4][5])).mean()"
+    "clf6 = svm.SVR(kernel = \"poly\", max_iter=-1)\n",
+    "startTime = time.time()\n",
+    "clf6.fit(X_train, np.ravel(Y6_train))\n",
+    "elapsedTime = time.time() - startTime\n",
+    "print('{} s'.format(int(elapsedTime)))\n",
+    "print(clf6.score(X_test, Y6_test))"
    ]
   },
   {
@@ -229,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "0.042407305026955104"
+       "0.0513393562489691"
       ]
      },
      "execution_count": 11,
@@ -238,7 +236,7 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[1::4]) - np.array(Y6_test.iloc[1::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[0::4]) - np.array(Y1_test.iloc[0::4][0])).mean()"
    ]
   },
   {
@@ -249,7 +247,7 @@
     {
      "data": {
       "text/plain": [
-       "0.04499368395731612"
+       "0.05927896611309717"
       ]
      },
      "execution_count": 12,
@@ -258,7 +256,7 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[2::4]) - np.array(Y6_test.iloc[2::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[1::4]) - np.array(Y1_test.iloc[1::4][0])).mean()"
    ]
   },
   {
@@ -269,7 +267,7 @@
     {
      "data": {
       "text/plain": [
-       "0.04702074310398529"
+       "0.05930413634809146"
       ]
      },
      "execution_count": 13,
@@ -278,44 +276,65 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[3::4]) - np.array(Y6_test.iloc[3::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[2::4]) - np.array(Y1_test.iloc[2::4][0])).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 4179.56635408,  7178.77002491,  7792.15088447,  4401.92348052,\n",
-       "         2771.56491565, -3838.48490729,  1990.        ]])"
+       "0.059531520421219467"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "i = 20\n",
+    "np.abs(clf1.predict(X_test.iloc[3::4]) - np.array(Y1_test.iloc[3::4][0])).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 48196.90073587, 139435.55765183,   5168.35755162,\n",
+       "          2617.55651824,   3826.05931958,  37270.26775595,\n",
+       "          1992.        ]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i = 120\n",
     "scalerY.inverse_transform([[clf1.predict([X_test.iloc[i]])[0], clf2.predict([X_test.iloc[i]])[0], clf3.predict([X_test.iloc[i]])[0], \n",
     "                          clf4.predict([X_test.iloc[i]])[0], clf5.predict([X_test.iloc[i]])[0], clf6.predict([X_test.iloc[i]])[0], 0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[4450., 3275., 4394., 1198.,  811.,   56., 2014.]])"
+       "array([[ 57900., 136649.,   3206.,    821.,   2385.,  49816.,   2014.]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
