--- a/Experiment 5 -> Gradient Boosting Regressor temporal.ipynb
+++ b/Experiment 5 -> Gradient Boosting Regressor temporal.ipynb
@@ -21,20 +21,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = pd.read_parquet(\"X/X_train.parquet\")\n",
-    "X_test = pd.read_parquet(\"X/X_test.parquet\")\n",
-    "Y_train = pd.read_parquet(\"Y/Y_train.parquet\")\n",
-    "Y_test = pd.read_parquet(\"Y/Y_test.parquet\")\n",
+    "X_train = pd.read_parquet(\"Xtime/X_train.parquet\")\n",
+    "X_test = pd.read_parquet(\"Xtime/X_test.parquet\")\n",
+    "Y_train = pd.read_parquet(\"Ytime/Y_train.parquet\")\n",
+    "Y_test = pd.read_parquet(\"Ytime/Y_test.parquet\")\n",
     "X_train = X_train[['Built', 'Below Secundary', 'Income Median',\n",
     "       'Population', 'Over 65', 'Over 65 Percentage', 'Over 85',\n",
     "       'Over 85 Percentage', 'Over 50', 'Over 50 Percentage', 'Under 20',\n",
     "       'Under 20 Percentage', 'Income Per Capita', 'Tourism', 'Area',\n",
-    "       'Built Area']]\n",
+    "       'Built Area', 'Last Year Municipal', 'Last Year Household',\n",
+    "       'Last Year Recovered', 'Last Year Recicled', 'Last Year Compost',\n",
+    "       'Last Year Built', 'Difference Built', 'Mean Built',\n",
+    "       'Last Year Below Secundary', 'Difference Below Secundary',\n",
+    "       'Last Year Population', 'Difference Population', 'Last Year Tourism',\n",
+    "       'Difference Tourism']]\n",
     "X_test = X_test[['Built', 'Below Secundary', 'Income Median',\n",
     "       'Population', 'Over 65', 'Over 65 Percentage', 'Over 85',\n",
     "       'Over 85 Percentage', 'Over 50', 'Over 50 Percentage', 'Under 20',\n",
     "       'Under 20 Percentage', 'Income Per Capita', 'Tourism', 'Area',\n",
-    "       'Built Area']]"
+    "       'Built Area', 'Last Year Municipal', 'Last Year Household',\n",
+    "       'Last Year Recovered', 'Last Year Recicled', 'Last Year Compost',\n",
+    "       'Last Year Built', 'Difference Built', 'Mean Built',\n",
+    "       'Last Year Below Secundary', 'Difference Below Secundary',\n",
+    "       'Last Year Population', 'Difference Population', 'Last Year Tourism',\n",
+    "       'Difference Tourism']]"
    ]
   },
   {
@@ -73,12 +83,12 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.8941935154126756\n"
+      "0.979188165869881\n"
      ]
     }
    ],
    "source": [
-    "clf1 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf1 = GradientBoostingRegressor()\n",
     "startTime = time.time()\n",
     "clf1.fit(X_train, np.ravel(Y1_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -96,12 +106,12 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.7635093210398933\n"
+      "0.9936148466888065\n"
      ]
     }
    ],
    "source": [
-    "clf2 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf2 = GradientBoostingRegressor()\n",
     "startTime = time.time()\n",
     "clf2.fit(X_train, np.ravel(Y2_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -119,12 +129,12 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.825890024264614\n"
+      "0.9427478245883824\n"
      ]
     }
    ],
    "source": [
-    "clf3 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf3 = GradientBoostingRegressor()\n",
     "startTime = time.time()\n",
     "clf3.fit(X_train, np.ravel(Y3_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -142,12 +152,12 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.802877417299758\n"
+      "0.9294579160116708\n"
      ]
     }
    ],
    "source": [
-    "clf4 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf4 = GradientBoostingRegressor()\n",
     "startTime = time.time()\n",
     "clf4.fit(X_train, np.ravel(Y4_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -165,12 +175,12 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.8260481219943225\n"
+      "0.9403447383140947\n"
      ]
     }
    ],
    "source": [
-    "clf5 = svm.SVR(kernel = \"rbf\", C = 5, max_iter=-1)\n",
+    "clf5 = GradientBoostingRegressor()\n",
     "startTime = time.time()\n",
     "clf5.fit(X_train, np.ravel(Y5_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -188,12 +198,12 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.9178831824059016\n"
+      "0.983518147373874\n"
      ]
     }
    ],
    "source": [
-    "clf6 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf6 = GradientBoostingRegressor()\n",
     "startTime = time.time()\n",
     "clf6.fit(X_train, np.ravel(Y6_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -209,7 +219,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0415408510958451"
+       "0.01308605740417267"
       ]
      },
      "execution_count": 10,
@@ -218,7 +228,7 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[0::4]) - np.array(Y6_test.iloc[0::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[0::4]) - np.array(Y1_test.iloc[0::4][0])).mean()"
    ]
   },
   {
@@ -229,7 +239,7 @@
     {
      "data": {
       "text/plain": [
-       "0.042407305026955104"
+       "0.005551595571008284"
       ]
      },
      "execution_count": 11,
@@ -238,7 +248,7 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[1::4]) - np.array(Y6_test.iloc[1::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[1::4]) - np.array(Y1_test.iloc[1::4][0])).mean()"
    ]
   },
   {
@@ -249,7 +259,7 @@
     {
      "data": {
       "text/plain": [
-       "0.04499368395731612"
+       "0.0072245804140108425"
       ]
      },
      "execution_count": 12,
@@ -258,7 +268,7 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[2::4]) - np.array(Y6_test.iloc[2::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[2::4]) - np.array(Y1_test.iloc[2::4][0])).mean()"
    ]
   },
   {
@@ -269,7 +279,7 @@
     {
      "data": {
       "text/plain": [
-       "0.04702074310398529"
+       "0.0071541193235313775"
       ]
      },
      "execution_count": 13,
@@ -278,44 +288,45 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[3::4]) - np.array(Y6_test.iloc[3::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[3::4]) - np.array(Y1_test.iloc[3::4][0])).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 4179.56635408,  7178.77002491,  7792.15088447,  4401.92348052,\n",
-       "         2771.56491565, -3838.48490729,  1990.        ]])"
+       "array([[ 41493.66873371, 136745.13916429,   3353.79125409,\n",
+       "           853.63561295,   2513.89754899,  30133.41978017,\n",
+       "          1992.        ]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "i = 20\n",
+    "i = 120\n",
     "scalerY.inverse_transform([[clf1.predict([X_test.iloc[i]])[0], clf2.predict([X_test.iloc[i]])[0], clf3.predict([X_test.iloc[i]])[0], \n",
     "                          clf4.predict([X_test.iloc[i]])[0], clf5.predict([X_test.iloc[i]])[0], clf6.predict([X_test.iloc[i]])[0], 0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[4450., 3275., 4394., 1198.,  811.,   56., 2014.]])"
+       "array([[ 57900., 136649.,   3206.,    821.,   2385.,  49816.,   2014.]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
