--- a/Experiment 6 -> Gaussian Process Regressor temporal.ipynb
+++ b/Experiment 6 -> Gaussian Process Regressor temporal.ipynb
@@ -12,6 +12,8 @@
     "from sklearn.multioutput import MultiOutputRegressor\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
+    "from sklearn.gaussian_process.kernels import DotProduct, WhiteKernel\n",
     "import time"
    ]
   },
@@ -21,20 +23,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = pd.read_parquet(\"X/X_train.parquet\")\n",
-    "X_test = pd.read_parquet(\"X/X_test.parquet\")\n",
-    "Y_train = pd.read_parquet(\"Y/Y_train.parquet\")\n",
-    "Y_test = pd.read_parquet(\"Y/Y_test.parquet\")\n",
+    "X_train = pd.read_parquet(\"Xtime/X_train.parquet\")\n",
+    "X_test = pd.read_parquet(\"Xtime/X_test.parquet\")\n",
+    "Y_train = pd.read_parquet(\"Ytime/Y_train.parquet\")\n",
+    "Y_test = pd.read_parquet(\"Ytime/Y_test.parquet\")\n",
     "X_train = X_train[['Built', 'Below Secundary', 'Income Median',\n",
     "       'Population', 'Over 65', 'Over 65 Percentage', 'Over 85',\n",
     "       'Over 85 Percentage', 'Over 50', 'Over 50 Percentage', 'Under 20',\n",
     "       'Under 20 Percentage', 'Income Per Capita', 'Tourism', 'Area',\n",
-    "       'Built Area']]\n",
+    "       'Built Area', 'Last Year Municipal', 'Last Year Household',\n",
+    "       'Last Year Recovered', 'Last Year Recicled', 'Last Year Compost',\n",
+    "       'Last Year Built', 'Difference Built', 'Mean Built',\n",
+    "       'Last Year Below Secundary', 'Difference Below Secundary',\n",
+    "       'Last Year Population', 'Difference Population', 'Last Year Tourism',\n",
+    "       'Difference Tourism']]\n",
     "X_test = X_test[['Built', 'Below Secundary', 'Income Median',\n",
     "       'Population', 'Over 65', 'Over 65 Percentage', 'Over 85',\n",
     "       'Over 85 Percentage', 'Over 50', 'Over 50 Percentage', 'Under 20',\n",
     "       'Under 20 Percentage', 'Income Per Capita', 'Tourism', 'Area',\n",
-    "       'Built Area']]"
+    "       'Built Area', 'Last Year Municipal', 'Last Year Household',\n",
+    "       'Last Year Recovered', 'Last Year Recicled', 'Last Year Compost',\n",
+    "       'Last Year Built', 'Difference Built', 'Mean Built',\n",
+    "       'Last Year Below Secundary', 'Difference Below Secundary',\n",
+    "       'Last Year Population', 'Difference Population', 'Last Year Tourism',\n",
+    "       'Difference Tourism']]"
    ]
   },
   {
@@ -72,13 +84,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.8941935154126756\n"
+      "5 s\n",
+      "0.9983721042209881\n"
      ]
     }
    ],
    "source": [
-    "clf1 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf1 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf1.fit(X_train, np.ravel(Y1_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -95,13 +108,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.7635093210398933\n"
+      "5 s\n",
+      "0.9980068136006773\n"
      ]
     }
    ],
    "source": [
-    "clf2 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf2 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf2.fit(X_train, np.ravel(Y2_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -118,13 +132,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.825890024264614\n"
+      "4 s\n",
+      "0.9947995398034627\n"
      ]
     }
    ],
    "source": [
-    "clf3 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf3 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf3.fit(X_train, np.ravel(Y3_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -141,13 +156,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.802877417299758\n"
+      "4 s\n",
+      "0.9943563537789261\n"
      ]
     }
    ],
    "source": [
-    "clf4 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf4 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf4.fit(X_train, np.ravel(Y4_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -164,13 +180,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.8260481219943225\n"
+      "4 s\n",
+      "0.9914230164002216\n"
      ]
     }
    ],
    "source": [
-    "clf5 = svm.SVR(kernel = \"rbf\", C = 5, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf5 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf5.fit(X_train, np.ravel(Y5_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -187,13 +204,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.9178831824059016\n"
+      "3 s\n",
+      "0.8975899230475254\n"
      ]
     }
    ],
    "source": [
-    "clf6 = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf6 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf6.fit(X_train, np.ravel(Y6_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -209,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0415408510958451"
+       "0.004735317576444173"
       ]
      },
      "execution_count": 10,
@@ -218,7 +236,7 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[0::4]) - np.array(Y6_test.iloc[0::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[0::4]) - np.array(Y1_test.iloc[0::4][0])).mean()"
    ]
   },
   {
@@ -229,7 +247,7 @@
     {
      "data": {
       "text/plain": [
-       "0.042407305026955104"
+       "0.0043354547220445915"
       ]
      },
      "execution_count": 11,
@@ -238,7 +256,7 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[1::4]) - np.array(Y6_test.iloc[1::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[1::4]) - np.array(Y1_test.iloc[1::4][0])).mean()"
    ]
   },
   {
@@ -249,7 +267,7 @@
     {
      "data": {
       "text/plain": [
-       "0.04499368395731612"
+       "0.005222144816486016"
       ]
      },
      "execution_count": 12,
@@ -258,7 +276,7 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[2::4]) - np.array(Y6_test.iloc[2::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[2::4]) - np.array(Y1_test.iloc[2::4][0])).mean()"
    ]
   },
   {
@@ -269,7 +287,7 @@
     {
      "data": {
       "text/plain": [
-       "0.04702074310398529"
+       "0.004886254101019857"
       ]
      },
      "execution_count": 13,
@@ -278,44 +296,45 @@
     }
    ],
    "source": [
-    "np.abs(clf6.predict(X_test.iloc[3::4]) - np.array(Y6_test.iloc[3::4][5])).mean()"
+    "np.abs(clf1.predict(X_test.iloc[3::4]) - np.array(Y1_test.iloc[3::4][0])).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 4179.56635408,  7178.77002491,  7792.15088447,  4401.92348052,\n",
-       "         2771.56491565, -3838.48490729,  1990.        ]])"
+       "array([[ 59146.09432876, 136864.81038232,   2897.66187172,\n",
+       "           670.13775918,   2426.9655209 ,  39552.15653214,\n",
+       "          1992.        ]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "i = 20\n",
+    "i = 120\n",
     "scalerY.inverse_transform([[clf1.predict([X_test.iloc[i]])[0], clf2.predict([X_test.iloc[i]])[0], clf3.predict([X_test.iloc[i]])[0], \n",
     "                          clf4.predict([X_test.iloc[i]])[0], clf5.predict([X_test.iloc[i]])[0], clf6.predict([X_test.iloc[i]])[0], 0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[4450., 3275., 4394., 1198.,  811.,   56., 2014.]])"
+       "array([[ 57900., 136649.,   3206.,    821.,   2385.,  49816.,   2014.]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
